--- a/home_module/src/main/res/layout/activity_home_main.xml
+++ b/home_module/src/main/res/layout/activity_home_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.muheda.home_module.view.Activity.MainActivity">
+    tools:context="com.example.muheda.home_module.view.Activity.HomeMainActivity">
 <TextView
     android:id="@+id/tv"
     android:layout_width="wrap_content"
